--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -11,7 +11,7 @@ on:
 jobs:
   macos:
     name: "Run on the fastest infrastructure"
-    runs-on: warp-macos-latest-arm64-6x
+    runs-on: warp-macos-14-arm64-6x
     steps:
       - uses: actions/checkout@v3
       - name: Version
