--- a/.github/workflows/blank.yaml
+++ b/.github/workflows/blank.yaml
@@ -11,7 +11,8 @@ on:
 jobs:
   macos:
     name: "Run on the fastest infrastructure"
-    runs-on: warp-ubuntu-latest-x64-2x
+    runs-on: warp-macos-14-arm64-6x
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v3
       - name: test
